--- a/manifest.json
+++ b/manifest.json
@@ -22,7 +22,7 @@
     "default_title": "Add feed to Slack"
   },
   "background": {
-    "service_worker": "js/background.js"
+    "service_worker": "js/service-worker.js"
   },
   "permissions": [
     "activeTab",
